--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-/* Add your class here */
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -47,7 +46,9 @@
   font-weight: bold;
 }
 
-/* Add the hover state styles for .nav__link here */
+.nav__link:hover {
+  color: #1f69c9;
+}
 
 .header__title {
   font-size: 66px;
@@ -65,9 +66,11 @@
 }
 
 .header__image {
-  /* Write styles here */
+  position: absolute;
   max-width: 636px;
   z-index: 1;
+  top: 135px;
+  right: 20px;
 }
 
 .header__footer {
@@ -87,7 +90,9 @@
   text-decoration: none;
 }
 
-/* Add the hover state styles for .header__link here */
+.header__link:hover {
+  color: #1f69c9;
+}
 
 .header__address {
   margin: 0;
@@ -115,13 +120,22 @@
   margin: 24px 0 0;
 }
 
-/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
+.staff__cards {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  max-width: 760px;
+  margin: 68px auto 0;
+}
 
 .card {
   background-color: #fff;
   border-radius: 6px;
   padding: 32px 40px 20px 32px;
   box-sizing: border-box;
+  width: 360px;
+  height: 420px;
 }
 
 .card__content {
@@ -129,8 +143,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  width: 360px;
-  height: 420px;
 }
 
 .card__title {
@@ -226,7 +238,9 @@
   text-decoration: none;
 }
 
-/* Add the hover state styles for .events__more here */
+.events__more:hover {
+  color: #1f69c9;
+}
 
 .events__cover {
   flex-grow: 1;
@@ -249,31 +263,26 @@
 }
 
 .person_name_feynman {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   top: -30px;
   left: 319px;
 }
 
 .person_name_burbidge {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   top: 96px;
   right: 125px;
 }
 
 .person_name_cannon {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   bottom: 18px;
   right: 216px;
 }
 
 .person_name_mitchell {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   left: 142px;
   bottom: 82px;
 }
 
 .person_name_tarter {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   top: 79px;
   left: 159px;
 }
@@ -319,11 +328,15 @@
   list-style-type: none;
   padding: 0;
   margin: 100px 0 0;
-  /* Add styles */
+  display: flex;
+  justify-content: stretch;
+  gap: 40px;
 }
 
 .step {
-  /* Add styles */
+  max-width: 220px;
+  margin: auto;
+  flex-basis: auto;
 }
 
 .step__title {
@@ -350,15 +363,15 @@
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
-  max-width: 154px;
+  display: flex;
 }
 
 .about__title {
   margin: 0;
   font-size: 20px;
   line-height: 30px;
-  font-weight: 500;
   z-index: 1;
+  padding-right: 120px;
 }
 
 .about__content {
@@ -366,10 +379,12 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
+  z-index: 1;
 }
 
 .about__paragraph {
   margin: 0;
+  padding-bottom: 32px;
 }
 
 .about__circle {
@@ -377,22 +392,35 @@
   width: 495px;
   height: 495px;
   border-radius: 50%;
+  position: absolute;
+  top: -121px;
+  left: -91px;
 }
 
 .footer {
   box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: #fff;
+  padding: 60px 102px 80px;
 }
 
 .footer__columns {
+  display: flex;
+  justify-content: stretch;
+  min-height: 224px;
 }
 
 .footer__column_content_hours {
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  padding-left: 100px;
 }
 
 .footer__logo {
+  width: 116px;
+  height: 21px;
 }
 
 .footer__list {
@@ -403,9 +431,12 @@
 }
 
 .footer__list-item {
+  padding-bottom: 16px;
 }
 
 .footer__column-heading {
+  margin: 0;
+  padding-bottom: 20px;
 }
 
 .footer__column-link {
@@ -415,8 +446,17 @@
   text-decoration: none;
 }
 
-.footer__social-icon {
+.footer__column-link:hover {
+  color: #c1c1c1;
 }
 
-.footer__copyright {
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.footer__copyright-element {
+  display: flex;
+  align-items: flex-end;
+  margin: 0;
 }
