--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,6 @@
 .logo {
   width: 196px;
   height: 60px;
-  align-items: center;
-  justify-content: flex-start;
 }
 
 .nav__links {
@@ -37,7 +35,6 @@
   margin-top: 8px;
   column-gap: 20px;
   align-items: center;
-  justify-content: flex-end;
 }
 
 .nav__link {
@@ -127,6 +124,7 @@
   gap: 40px;
   max-width: 760px;
   margin: 68px auto 0;
+  padding: 0;
 }
 
 .card {
@@ -163,8 +161,6 @@
   font-size: 14px;
   line-height: 20px;
   color: #838383;
-  /* Auto margins applied on a flex item automatically extend specified margin to occupy the extra space in the flex container */
-  /* In our case, this pushes the element down to the bottom */
   margin-top: auto;
 }
 
@@ -329,14 +325,12 @@
   padding: 0;
   margin: 100px 0 0;
   display: flex;
-  justify-content: stretch;
+  justify-content: center;
   gap: 40px;
 }
 
 .step {
-  max-width: 220px;
-  margin: auto;
-  flex-basis: auto;
+  flex-basis: 220px;
 }
 
 .step__title {
@@ -387,6 +381,10 @@
   padding-bottom: 32px;
 }
 
+.about__paragraph:last-of-type {
+  padding: 0;
+}
+
 .about__circle {
   background-color: #2f80ed;
   width: 495px;
@@ -424,7 +422,6 @@
 }
 
 .footer__list {
-  /* The code below removes the default browser styles for lists */
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -432,6 +429,10 @@
 
 .footer__list-item {
   padding-bottom: 16px;
+}
+
+.footer__list-item:last-of-type {
+  padding: 0;
 }
 
 .footer__column-heading {
@@ -453,6 +454,8 @@
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  padding-right: 16px;
+  margin: 0;
 }
 
 .footer__copyright-element {
